--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,11 +131,119 @@
     /* padding-top: 10px;
     padding-bottom: 10px; */
     padding: 10px;
-        border-collapse: collapse;
+    border-collapse: collapse;
 }
 
-.br-lft{
+.br-lft {
     border-left: none;
+}
+
+.sect-3-head {
+    font-family: 'ModernoFBComp', sans-serif;
+    font-size: var(--fs-157);
+    font-weight: 400;
+    line-height: 188.4px;
+    text-align: center;
+    box-shadow: 2px 2px 4px 0px #00000040;
+
+    box-shadow: 0px 4px 4px 0px #00000040 inset;
+
+    box-shadow: 2px 2px 1px 0px #FFFFFF52 inset;
+
+}
+
+.boderrr {
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+}
+
+.news {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: 72px;
+    font-weight: 400;
+    line-height: 100.8px;
+    color: var(--color-black);
+    text-align: left;
+    max-width: 1140px;
+}
+
+.box{
+    padding: 86px, 52px, 86px, 43px !important;
+}
+.news-title {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 21.79px;
+    text-align: left;
+    color: var(--color-black);
+}
+
+.news-head {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-18);
+    font-weight: 400;
+    line-height: 27px;
+    color: var(--color-black);
+    max-width: 475px;
+}
+
+.outline-black {
+    outline: 2px solid #000000;
+}
+
+.w-fit {
+    width: fit-content;
+}
+
+.mt-16{
+    margin-top: 16px;
+}
+
+.pl-43{
+    padding-left: 43px !important;
+}
+
+.two {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-14);
+    font-weight: 400;
+    line-height: 19.07px;
+    text-align: left;
+    color: var(--color-black);
+}
+
+.etam {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-36);
+    font-weight: 600;
+    line-height: 39.85px;
+    text-align: left;
+    color: var(--color-black);
+}
+
+.diam {
+    font-family: "Noto Serif",serif;
+    font-size: var(--fs-16);
+    color: var(--color-black);
+    font-weight: 400;
+    line-height: 21.79px;
+    text-align: left;
+}
+.childslider{
+    width: 380px;
+    height: 257px;
+    padding: 20px;
+}
+.br-top{
+    border-top: none;
+}
+.br-bottom{
+    border-bottom: none;
+}
+
+.c-p{
+    cursor: pointer;
 }
 /* Make it move */
 @keyframes marquee {
