--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,9 +167,10 @@
     max-width: 1140px;
 }
 
-.box{
+.box {
     padding: 86px, 52px, 86px, 43px !important;
 }
+
 .news-title {
     font-family: 'Noto Serif', sans-serif;
     font-size: 16px;
@@ -196,11 +197,11 @@
     width: fit-content;
 }
 
-.mt-16{
+.mt-16 {
     margin-top: 16px;
 }
 
-.pl-43{
+.pl-43 {
     padding-left: 43px !important;
 }
 
@@ -223,27 +224,91 @@
 }
 
 .diam {
-    font-family: "Noto Serif",serif;
+    font-family: "Noto Serif", serif;
     font-size: var(--fs-16);
     color: var(--color-black);
     font-weight: 400;
     line-height: 21.79px;
     text-align: left;
 }
-.childslider{
+
+.childslider {
     width: 380px;
     height: 257px;
     padding: 20px;
 }
-.br-top{
+
+.br-top {
     border-top: none;
 }
-.br-bottom{
+
+.br-bottom {
     border-bottom: none;
 }
 
-.c-p{
+.c-p {
     cursor: pointer;
+}
+
+.minting {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-80);
+    font-weight: 400;
+    line-height: 83.2px;
+    text-align: left;
+    /* box-shadow: 2px 2px 1px 0px #FFFFFF52 inset;
+    box-shadow: 2px 2px 4px 0px #00000040; */
+    color: var(--color-black);
+}
+
+.max-w-438 {
+    max-width: 438px;
+}
+
+.box1 {
+    width: 238px;
+    height: 53px;
+}
+
+.btn-sub {
+    border-right: 2px solid #000000;
+}
+
+.btn-add,
+.btn-sub {
+    border: none;
+    background-color: transparent;
+    padding: 24px;
+    display: flex;
+    align-items: center;
+}
+
+.text-e {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-lg);
+    font-weight: 600;
+    line-height: 39.85px;
+    color: #000000;
+}
+
+.btn-add {
+    border-left: 2px solid #000000;
+}
+
+.btn-mint {
+    width: 111px;
+    background: #FFD600;
+    border: 2px solid #000000;
+    height: 43px;
+    transition: all 300ms linear;
+}
+
+.color-red {
+    color: #FF0000;
+}
+
+.color-green {
+    color: #00A106;
 }
 /* Make it move */
 @keyframes marquee {
