--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,61 @@
     border-left: 2px solid;
     border-right: 2px solid;
 }
+
+.text-box6 {
+    padding: 0 20px;
+    width: 200px;
+}
+
+.sec-6-font1 {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-24);
+    font-weight: var(400);
+    line-height: 26.57px;
+    text-align: left;
+    text-wrap: nowrap;
+}
+
+.sec-6-font2 {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-36);
+    font-weight: var(600);
+    line-height: 39.85px;
+    text-align: left;
+}
+
+.border-bottom {
+    border-bottom: 2px solid var(--color-black) !important;
+}
+
+.border-top {
+    border-top: 2px solid var(--color-black) !important;
+}
+
+.border-left{
+    border-left: 2px solid;
+}
+
+.img-border2{
+    border-left: 2px solid;
+    border-right: 2px solid;
+}
+
+.roadmap-head {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-80);
+    font-weight: 400;
+    line-height: 83.2px;
+    text-align: left;
+    color: transparent;
+    text-shadow: 1px 1px 1px var(--color-black);
+    background-clip: text;
+}
+
+.py-20 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 /* Make it move */
 @keyframes marquee {
     0% {
