--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,6 +376,9 @@
     border-top: 2px solid var(--color-black) !important;
 }
 
+.border-right{
+    border-right: 2px solid var(--color-black) !important;
+}
 .border-left{
     border-left: 2px solid;
 }
@@ -400,6 +403,119 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+/* timeline */
+
+.timeline {
+    position: relative;
+    padding-top: 70px;
+    padding-bottom: 400px;
+}
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 2px;
+    background-color: var(--color-black);
+    top: 95px;
+    bottom: 70px;
+    left: 30px;
+    margin-left: -3px;
+}
+
+.timeline-box-right {
+    position: relative;
+    width: 100%;
+    left: 0;
+}
+
+.timeline-box-right::after {
+    content: "";
+    width: 59px;
+    height: 59px;
+    position: absolute;
+    background-image: url(../images/timeline-circle.png);
+    border-radius: 50%;
+    top: 14px;
+    left: 1px;
+    z-index: 1;
+}
+
+.timeline-box-left {
+    position: relative;
+    width: 100%;
+    left: 0;
+}
+
+.timeline-box-left::after {
+    content: "";
+    width: 59px;
+    height: 59px;
+    position: absolute;
+    background-image: url(../images/timeline-circle.png);
+    border-radius: 50%;
+    top: 6px;
+    left: 1px;
+    z-index: 1;
+}
+
+.timeline-box-left {
+    padding: 10px 0px 10px 70px;
+
+}
+
+.timeline-box-right {
+    padding: 10px 0px 10px 70px;
+
+}
+
+.timeline-box-right .timeline-para {
+    max-width: 495px;
+}
+
+.timeline-box-left .timeline-para {
+    max-width: 460px;
+}
+
+.timeline-box-left .timeline-heading2 {
+    max-width: 460px;
+}
+
+.max-w-495 {
+    max-width: 495px;
+}
+
+.timeline-para {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-16);
+    font-weight: 400;
+    line-height: 21.79px;
+    text-align: left;
+}
+
+.timeline-heading {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-14);
+    font-weight: 400;
+    line-height: 19.07px;
+    text-align: left;
+}
+
+.timeline-heading2 {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-18);
+    font-weight: 600;
+    line-height: 39.85px;
+    text-align: left;
+}
+
+.arrow_timeline {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    left: 50.35% !important;
+    bottom: 57px;
+}
 /* Make it move */
 @keyframes marquee {
     0% {
@@ -409,4 +525,69 @@
     100% {
         transform: translate(-100%, 0);
     }
+}
+
+@media (min-width:576px) {
+    /* timeline */
+    .timeline::after {
+        content: '';
+        position: absolute;
+        width: 2px;
+        background-color: var(--color-black);
+        top: 95px;
+        bottom: 70px;
+        left: 50%;
+        margin-left: -3px;
+    }
+
+    .timeline-box-left::after {
+        content: "";
+        width: 59px;
+        height: 59px;
+        position: absolute;
+        background-image: url(../images/timeline-circle.png);
+        border-radius: 50%;
+        top: 6px;
+        right: -31px;
+        left: unset;
+    }
+
+    .timeline-box-right::after {
+        content: "";
+        width: 59px;
+        height: 59px;
+        position: absolute;
+        background-image: url(../images/timeline-circle.png);
+        border-radius: 50%;
+        top: 14px;
+        left: -31px;
+        z-index: 1;
+    }
+
+    .timeline-box-right {
+        position: relative;
+        width: 50%;
+        left: 50%;
+    }
+
+    .timeline-box-left {
+        position: relative;
+        width: 50%;
+        left: 0;
+    }
+
+    .timeline-box-left {
+        padding: 10px 36px 10px 10px;
+    }
+
+    .arrow_timeline {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        left: 50.35%;
+        bottom: 57px;
+        transform: translateX(-57%);
+    }
+
+
 }
