--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,21 @@
 
 }
 
+.bordr2 {
+    border-top: 2px solid black;
+
+}
+.border2 {
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+
+}
+
+.border3 {
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    padding: 10px;
+}
 .about {
     font-family: "Noto Serif", serif;
     font-size: var(--fs-16);
@@ -130,7 +145,7 @@
     border-right: 2px solid black;
     /* padding-top: 10px;
     padding-bottom: 10px; */
-    padding: 10px;
+    padding: 10px 24px;
     border-collapse: collapse;
 }
 
@@ -317,6 +332,17 @@
     color: #000000;
 }
 
+.latest {
+    font-family: Perpetua Titling MT;
+    font-size: var(--fs-80);
+    font-weight: 300;
+    line-height: 83.2px;
+    text-align: left;
+    color: var(--color-black);
+}
+
+
+
 .btn-add {
     border-left: 2px solid #000000;
 }
@@ -337,11 +363,11 @@
     color: #00A106;
 }
 
-.img-border{
+.img-border {
     border-left: 2px solid;
 }
 
-.img-border2{
+.img-border2 {
     border-left: 2px solid;
     border-right: 2px solid;
 }
@@ -376,14 +402,15 @@
     border-top: 2px solid var(--color-black) !important;
 }
 
-.border-right{
+.border-right {
     border-right: 2px solid var(--color-black) !important;
 }
-.border-left{
-    border-left: 2px solid;
+
+.border-left {
+    border-left: 2px solid var(--color-black) !important;
 }
 
-.img-border2{
+.img-border2 {
     border-left: 2px solid;
     border-right: 2px solid;
 }
@@ -404,12 +431,17 @@
     padding-bottom: 20px;
 }
 
+.py-88{
+    padding-top: 88px;
+    padding-bottom: 88px;
+}
+
 /* timeline */
 
 .timeline {
     position: relative;
     padding-top: 70px;
-    padding-bottom: 400px;
+    padding-bottom: 230px;
 }
 
 .timeline::after {
@@ -513,9 +545,143 @@
     position: absolute;
     width: 30px;
     height: 30px;
-    left: 50.35% !important;
+    left: 13px;
     bottom: 57px;
 }
+
+.team{
+        font-family: "Noto Serif", serif;
+        font-size: var(--fs-80);
+        font-weight: 400;
+        line-height: 83.2px;
+        text-align: left;
+        color: var(--color-black);
+}
+
+/* second-slider */
+.chlidslide {
+    background-image: url(../images/slider-bg-img.jpg);
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hardo {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-36);
+    font-weight: 900;
+    line-height: 49.03px;
+    text-align: left;
+    color: var(--color-brown);
+    margin-top: 24px;
+}
+
+.color-hex {
+    color: var(--color-hex) !important;
+}
+
+.childslider2 {
+    padding: 35px;
+    background-image: url(../images/slider-bg-img.jpg);
+}
+
+.border-lrp {
+    border-left: 2px solid rgba(0, 0, 0, 1) !important;
+    border-right: 2px solid rgba(0, 0, 0, 1) !important;
+    padding: 10px;
+}
+.crypto {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-16);
+    font-weight: 400;
+    line-height: 21.79px;
+    text-align: center;
+    color: var(--color-black);
+    margin-top: 16px;
+}
+
+.diam-pera2 {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: 36px;
+    font-weight: 900;
+    line-height: 49.03px;
+    color: var(--color-slati);
+    max-width: 319px;
+}
+
+.FAQs {
+    font-family: 'ModernoFBComp', sans-serif;
+    font-size: var(--fs-80);
+    font-weight: 400;
+    line-height: 83.2px;
+    text-align: left;
+    /* background-color: var(--text-bg); */
+    color: transparent;
+    text-shadow: 1px 1px 1px var(--color-black);
+    background-clip: text;
+}
+
+/* accordion */
+.accordion_btn_font {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-16);
+    font-weight: var(--font-weight-lg);
+    line-height: 22.69px;
+    text-align: left;
+    cursor: pointer;
+    padding: 20px 30px 20px 30px;
+}
+
+.accordion-font1 {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-16);
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    padding: 20px 30px 20px 30px;
+}
+
+.accordion_sign {
+    right: 3%;
+    top: 24%;
+}
+
+
+.copyright {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-16);
+    font-weight: 400;
+    line-height: 21.79px;
+    text-align: left;
+    color: var(--color-black);
+}
+
+/* scroll to top */
+.scroll-button {
+    position: fixed;
+    bottom: 2%;
+    right: 1%;
+    z-index: 4;
+    width: 55px;
+    display: none;
+    height: 55px;
+    background-color: var(--text-bg);
+    border-radius: 50%;
+    cursor: pointer;
+    border: 1px solid var(--text-bg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.scroll-button:hover {
+    background: var(--color-white);
+}
+
+.scroll-button:hover path {
+    fill: var(--text-bg);
+}
+
 /* Make it move */
 @keyframes marquee {
     0% {
@@ -528,6 +694,7 @@
 }
 
 @media (min-width:576px) {
+
     /* timeline */
     .timeline::after {
         content: '';
@@ -584,10 +751,25 @@
         position: absolute;
         width: 30px;
         height: 30px;
-        left: 50.35%;
+        left: 50%;
         bottom: 57px;
         transform: translateX(-57%);
     }
 
+    /* accordion */
+    .accordion_btn_font {
+        font-family: "Noto Serif", serif;
+        font-size: var(--fs-24);
+        font-weight: 600;
+        line-height: 32.69px;
+        text-align: left;
+        cursor: pointer;
+        padding: 20px 30px 20px 30px;
+    }
+
+    .sm-py-40 {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
 
 }
