--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,99 @@
     color: #FFD600;
 }
 
+#menuicon {
+    cursor: pointer;
+    width: 50px;
+    height: 35px;
+    position: absolute;
+    right: 4%;
+    top: 7%;
+    display: block;
+    z-index: 10;
+    transition: all 0.3s linear;
+}
+
+#menuicon .line {
+    width: 50px;
+    background: #000000;
+    margin: 6px 0 0 0;
+    height: 5px;
+    display: block;
+    transition: all 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.line-1 {
+    margin-top: 0;
+}
+
+#menuicon:hover .line-1 {
+    width: 30px;
+}
+
+#menuicon:hover .line-2 {
+    width: 40px;
+}
+
+#menuicon:hover .line-3 {
+    width: 20px;
+}
+
+.showlist {
+    left: 0%;
+    transition: all 300ms linear;
+}
+
+.menulist {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0%;
+    right: -100%;
+    background-image: linear-gradient(to top, #000000, #0066AD);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    z-index: 8;
+    transition: all 300ms linear;
+}
+
+ul {
+    flex-direction: column;
+    gap: 40px;
+}
+
+.navbar-iteams {
+    color: #FFFFFF;
+}
+
+.navbar-iteams {
+    font-family: "Noto Serif", serif;
+    font-size: var(--font-size-16);
+    font-weight: 400;
+    line-height: 21.79px;
+    color: var(--color-black);
+    white-space: nowrap;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.navbar-iteams::after {
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    right: 0%;
+    background-color: #000000;
+    width: 0%;
+    height: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-iteams:hover::after {
+    width: 100%;
+    left: 0%;
+    right: auto;
+}
+
 .bg-img {
     background-image: url(../images/bg-img.png);
     background-repeat: no-repeat;
@@ -120,6 +213,7 @@
     border-top: 2px solid black;
 
 }
+
 .border2 {
     border-top: 3px solid black;
     border-bottom: 3px solid black;
@@ -131,14 +225,7 @@
     border-right: 3px solid black;
     padding: 10px;
 }
-.about {
-    font-family: "Noto Serif", serif;
-    font-size: var(--fs-16);
-    font-weight: 400;
-    line-height: 21.79px;
-    text-align: center;
-    color: var(--color-black);
-}
+
 
 .bordr1 {
     border-left: 2px solid black;
@@ -431,7 +518,7 @@
     padding-bottom: 20px;
 }
 
-.py-88{
+.py-88 {
     padding-top: 88px;
     padding-bottom: 88px;
 }
@@ -549,13 +636,13 @@
     bottom: 57px;
 }
 
-.team{
-        font-family: "Noto Serif", serif;
-        font-size: var(--fs-80);
-        font-weight: 400;
-        line-height: 83.2px;
-        text-align: left;
-        color: var(--color-black);
+.team {
+    font-family: "Noto Serif", serif;
+    font-size: var(--fs-80);
+    font-weight: 400;
+    line-height: 83.2px;
+    text-align: left;
+    color: var(--color-black);
 }
 
 /* second-slider */
@@ -590,6 +677,7 @@
     border-right: 2px solid rgba(0, 0, 0, 1) !important;
     padding: 10px;
 }
+
 .crypto {
     font-family: "Noto Serif", serif;
     font-size: var(--fs-16);
@@ -692,6 +780,60 @@
         transform: translate(-100%, 0);
     }
 }
+
+@media (min-width:992px) {
+    .menulist {
+        position: relative;
+        width: 100%;
+        height: fit-content;
+        top: 0%;
+        right: 0%;
+        background-image: none;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        z-index: 8;
+        transition: none;
+    }
+
+    ul {
+        flex-direction: row;
+        gap: 0px;
+    }
+
+    .navbar-iteams {
+        color: #000000;
+    }
+
+
+    .outline-black1 {
+        outline: 2px solid #000000;
+    }
+
+    #menuicon {
+        display: none;
+    }
+}
+
+
+@media (max-width:768px) {
+    :root {
+        --fs-14: 14px;
+        --fs-16: 16px;
+        --fs-18: 18px;
+        --fs-20:20px;
+        --fs-24: 24px;
+        --fs-36: 36px;
+        --fs-72: 72px;
+        --fs-80: 80px;
+        --fs-157: 101px;
+    }
+    
+    .lh-101{
+        line-height: 101px;
+    }
+}
+
 
 @media (min-width:576px) {
 
