--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -4,7 +4,9 @@
     --fs-18: 18px;
     --fs-20: 20px;
     --fs-24: 24px;
+    --fs-28:28px;
     --fs-32: 32px;
+    --fs-34:34px;
     --fs-36: 36px;
     --fs-38: 38px;
     --fs-70:70px;
