--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -4,12 +4,13 @@
     --fs-18: 18px;
     --fs-20: 20px;
     --fs-24: 24px;
-    --fs-28:28px;
+    --fs-26: 26px;
+    --fs-28: 28px;
     --fs-32: 32px;
-    --fs-34:34px;
+    --fs-34: 34px;
     --fs-36: 36px;
     --fs-38: 38px;
-    --fs-70:70px;
+    --fs-70: 70px;
     --fs-72: 72px;
     --fs-80: 80px;
     --fs-157: 157px;
@@ -17,6 +18,7 @@
     --fs-67: 67px;
     --fs-101: 101px;
     /* --color-- */
+    --color-white:#FFFFFF;
     --color-brown: #70675f;
     --color-black: #000000;
     --color-yellow: #ffd600;
