--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,23 +43,23 @@
 }
 
 .h-text {
-    color: #FFFFFF;
+    color: var(--color-white);
     font-family: "Noto Serif", serif;
-    font-size: 16px;
+    font-size: var(--fs-16);
     font-weight: 400;
     line-height: 21.79px;
 }
 
 .border-red {
-    border: 1px solid #FF0000;
+    border: 1px solid var(--color-red);
     border-radius: 5px;
     padding: 3px;
     margin-left: 8px;
-    color: #FF0000;
+    color: var(--color-red);
 }
 
 .border-y {
-    border: 1px solid #FFD600;
+    border: 1px solid var(--color-yellow);
     border-radius: 5px;
     padding: 3px;
     margin-left: 8px;
@@ -80,7 +80,7 @@
 
 #menuicon .line {
     width: 50px;
-    background: #000000;
+    background: var(--color-black);
     margin: 6px 0 0 0;
     height: 5px;
     display: block;
@@ -118,7 +118,7 @@
     height: 100vh;
     top: 0%;
     right: -100%;
-    background: linear-gradient(to top, #000000,#ffd600);
+    background: linear-gradient(to top, #000000, #ffd600);
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
@@ -132,7 +132,7 @@ ul {
 }
 
 .navbar-iteams {
-    color: #FFFFFF;
+    color: var(--color-white);
 }
 
 .navbar-iteams {
@@ -151,7 +151,7 @@ ul {
     position: absolute;
     bottom: -3px;
     right: 0%;
-    background-color: #000000;
+    background-color: var(--color-black);
     width: 0%;
     height: 2px;
     transition: all 0.3s ease-in-out;
@@ -161,6 +161,15 @@ ul {
     width: 100%;
     left: 0%;
     right: auto;
+}
+
+.read {
+    font-family: 'Noto Serif', sans-serif;
+    font-size: var(--fs-14);
+    font-weight: 400;
+    line-height: 19.07px;
+    text-align: left;
+    color: var(--color-black);
 }
 
 .bg-img {
@@ -200,8 +209,6 @@ ul {
 }
 
 .walletbox {
-    /* width: Hug (165px)px;
-    height: Hug (43px)px; */
     padding: 12px 16px 12px 16px;
     gap: 10px;
     border: 2px;
@@ -215,40 +222,40 @@ ul {
 }
 
 .walletbox:hover {
-    background-color: #000000;
-    color: #FFD600;
+    background-color: var(--color-black);
+    color: var(--color-yellow);
     filter: drop-shadow(0 0 15px #FFD600);
 }
 
 
 
 .bordr {
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    border-top: 2px solid var(--color-black);
+    border-bottom: 2px solid var(--color-black);
 
 }
 
 .bordr2 {
-    border-top: 2px solid black;
+    border-top: 2px solid var(--color-black);
 
 }
 
 .border2 {
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
+    border-top: 3px solid var(--color-black);
+    border-bottom: 3px solid var(--color-black);
 
 }
 
 .border3 {
-    border-left: 3px solid black;
-    border-right: 3px solid black;
+    border-left: 3px solid var(--color-black);
+    border-right: 3px solid var(--color-black);
     padding: 10px;
 }
 
 
 .bordr1 {
-    border-left: 2px solid black;
-    border-right: 2px solid black;
+    border-left: 2px solid var(--color-black);
+    border-right: 2px solid var(--color-black);
     /* padding-top: 10px;
     padding-bottom: 10px; */
     padding: 10px 24px;
@@ -274,8 +281,8 @@ ul {
 }
 
 .boderrr {
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    border-top: 2px solid var(--color-black);
+    border-bottom: 2px solid var(--color-black);
 }
 
 .news {
@@ -294,7 +301,7 @@ ul {
 
 .news-title {
     font-family: 'Noto Serif', sans-serif;
-    font-size: 16px;
+    font-size: var(--fs-16);
     font-weight: 400;
     line-height: 21.79px;
     text-align: left;
@@ -311,7 +318,7 @@ ul {
 }
 
 .outline-black {
-    outline: 2px solid #000000;
+    outline: 2px solid var(--color-black);
 }
 
 .w-fit {
@@ -348,6 +355,7 @@ ul {
     text-align: left;
     color: var(--color-black);
 }
+
 .diam {
     font-family: "Noto Serif", serif;
     font-size: var(--fs-16);
@@ -413,7 +421,7 @@ ul {
     font-size: var(--fs-36);
     font-weight: 600;
     line-height: 39.85px;
-    color: #000000;
+    color: var(--color-black);
 }
 
 
@@ -423,7 +431,7 @@ ul {
     font-size: var(--fs-18);
     font-weight: 600;
     line-height: 39.85px;
-    color: #000000;
+    color: var(--color-black);
 }
 
 .timer {
@@ -431,7 +439,7 @@ ul {
     font-size: var(--fs-36);
     font-weight: 600;
     line-height: 39.85px;
-    color: #000000;
+    color: var(--color-black);
 }
 
 .mint-now {
@@ -439,11 +447,11 @@ ul {
     font-size: var(--fs-14);
     font-weight: 600;
     line-height: 39.85px;
-    color: #000000;
+    color: var(--color-black);
 }
 
 .latest {
-    font-family: Perpetua Titling MT;
+    font-family: "Noto Serif", serif;
     font-size: var(--fs-80);
     font-weight: 300;
     line-height: 83.2px;
@@ -454,23 +462,29 @@ ul {
 
 
 .btn-add {
-    border-left: 2px solid #000000;
+    border-left: 2px solid var(--color-black);
 }
 
 .btn-mint {
     width: 111px;
-    background: #FFD600;
-    border: 2px solid #000000;
+    background: var(--color-yellow);
+    border: 2px solid var(--color-black);
     height: 43px;
     transition: all 300ms linear;
 }
 
+.btn-mint:hover {
+    background-color: var(--color-black);
+    color: var(--color-yellow);
+    filter: drop-shadow(0 0 15px #FFD600);
+}
+
 .color-red {
-    color: #FF0000;
+    color: var(--color-red);
 }
 
 .color-green {
-    color: #00A106;
+    color: var(--color-green);
 }
 
 .img-border {
@@ -686,9 +700,9 @@ ul {
     margin-top: 24px;
 }
 
-.color-hex {
+/* .color-hex {
     color: var(--color-hex) !important;
-}
+} */
 
 .childslider2 {
     padding: 35px;
@@ -713,10 +727,10 @@ ul {
 
 .diam-pera2 {
     font-family: 'Noto Serif', sans-serif;
-    font-size: 36px;
+    font-size: var(--fs-36);
     font-weight: 900;
     line-height: 49.03px;
-    color: var(--color-slati);
+    color: var(--color-hex);
     max-width: 319px;
 }
 
@@ -825,7 +839,7 @@ ul {
         border-right: 2px solid var(--color-black) !important;
     }
 
-    .border-top2{
+    .border-top2 {
         border-top: 2px solid var(--color-black) !important;
     }
 }
@@ -881,6 +895,14 @@ ul {
     .lh-140 {
         line-height: 101px;
     }
+
+    .fs-28 {
+        font-size: 28px;
+    }
+
+    .fs-30 {
+        font-size: var(--fs-26);
+    }
 }
 
 @media (max-width:576px) {
@@ -902,10 +924,13 @@ ul {
         line-height: 65px;
     }
 
-    .fs-28{
+    .fs-28 {
         font-size: var(--fs-28);
     }
 
+    .fs-30 {
+        font-size: 30px;
+    }
 }
 
 @media (min-width:576px) {
