--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@
     width: 50px;
     height: 35px;
     position: absolute;
-    right: 4%;
+    right: -1%;
     top: 7%;
     display: block;
     z-index: 10;
@@ -79,10 +79,10 @@
 }
 
 #menuicon .line {
-    width: 50px;
+    width: 33px;
     background: var(--color-black);
     margin: 6px 0 0 0;
-    height: 5px;
+    height: 4px;
     display: block;
     transition: all 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
@@ -826,7 +826,9 @@ ul {
         line-height: 85px;
     }
 
-    
+    .flex-clmn{
+        flex-direction: column;
+    }
 
     .fs-61 {
         font-size: 61px;
@@ -872,7 +874,7 @@ ul {
         transition: none;
     }
 
-    .ul {
+    ul {
         flex-direction: row;
         gap: 0px;
     }
@@ -957,9 +959,9 @@ ul {
 
 @media (min-width:576px) {
 
-    .pl-43 {
+    /* .pl-43 {
         padding-left: 43px !important;
-    }
+    } */
 
     .timeline::after {
         content: '';
